--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -149,9 +149,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="capi_rtc_player.cpp" />
+    <ClCompile Include="capi_rtc_publish.cpp" />
     <ClCompile Include="casync_log.cpp" />
+    <ClCompile Include="caudio_payload.cpp" />
     <ClCompile Include="ccfg.cpp" />
     <ClCompile Include="cclient_msg_dispatch.cpp" />
+    <ClCompile Include="ccodec_payload.cpp" />
     <ClCompile Include="cconfig.cpp" />
     <ClCompile Include="ccrypto_random.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
@@ -167,14 +171,24 @@
     <ClCompile Include="cmsg_dispatch.cpp" />
     <ClCompile Include="cnetwork.cpp" />
     <ClCompile Include="cnet_adapter_test.cpp" />
-    <ClCompile Include="Consumer.cpp" />
     <ClCompile Include="cortc.cpp" />
     <ClCompile Include="crandom.cpp" />
     <ClCompile Include="crate_calculator.cpp" />
+    <ClCompile Include="cred_payload.cpp" />
+    <ClCompile Include="crtc_connection.cpp" />
+    <ClCompile Include="crtc_constants.cpp" />
+    <ClCompile Include="crtc_consumer.cpp" />
     <ClCompile Include="crtc_sdp.cpp" />
     <ClCompile Include="crtc_sdp_handler.cpp" />
     <ClCompile Include="crtc_sdp_test.cpp" />
     <ClCompile Include="crtc_sdp_util.cpp" />
+    <ClCompile Include="crtc_server_mgr.cpp" />
+    <ClCompile Include="crtc_source.cpp" />
+    <ClCompile Include="crtc_source_description.cpp" />
+    <ClCompile Include="crtc_ssrc_generator.cpp" />
+    <ClCompile Include="crtc_track_description.cpp" />
+    <ClCompile Include="crtc_user_config.cpp" />
+    <ClCompile Include="crtx_paylod_des.cpp" />
     <ClCompile Include="csocket_util.cpp" />
     <ClCompile Include="csrtp_session.cpp" />
     <ClCompile Include="cudp_socket.cpp" />
@@ -184,28 +198,22 @@
     <ClCompile Include="croom.cpp" />
     <ClCompile Include="croom_mgr.cpp" />
     <ClCompile Include="crtc_util.cpp" />
-    <ClCompile Include="csctp_association.cpp" />
-    <ClCompile Include="csctp_association_mgr.cpp" />
     <ClCompile Include="ctimer.cpp" />
     <ClCompile Include="ctime_api.cpp" />
+    <ClCompile Include="cvideo_payload.cpp" />
     <ClCompile Include="cwan_handler.cpp" />
     <ClCompile Include="cwan_server.cpp" />
     <ClCompile Include="cwan_session.cpp" />
-    <ClCompile Include="cwebrtc_mgr.cpp" />
-    <ClCompile Include="cwebrtc_transport.cpp" />
-    <ClCompile Include="cwebrtc_transprot_handler.cpp" />
     <ClCompile Include="cwebsocket_msg_reserve.cpp" />
     <ClCompile Include="cnet_type.cpp" />
     <ClCompile Include="cwebsocket_msg_queue.cpp" />
     <ClCompile Include="cwebsocket_server_mgr.cpp" />
     <ClCompile Include="cwebsocket_session.cpp" />
     <ClCompile Include="cwin32.cpp" />
-    <ClCompile Include="DtlsTransport.cpp" />
     <ClCompile Include="H264.cpp" />
     <ClCompile Include="h264_profile_level_id.cc" />
     <ClCompile Include="IceCandidate.cpp" />
     <ClCompile Include="IceServer.cpp" />
-    <ClCompile Include="KeyFrameRequestManager.cpp" />
     <ClCompile Include="libwebrtc\api\network_state_predictor.cc" />
     <ClCompile Include="libwebrtc\api\transport\bitrate_settings.cc" />
     <ClCompile Include="libwebrtc\api\transport\field_trial_based_config.cc" />
@@ -252,10 +260,8 @@
     <ClCompile Include="libwebrtc\system_wrappers\source\field_trial.cc" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Media.cpp" />
-    <ClCompile Include="NackGenerator.cpp" />
     <ClCompile Include="Parameters.cpp" />
     <ClCompile Include="PortManager.cpp" />
-    <ClCompile Include="Producer.cpp" />
     <ClCompile Include="RtcpFeedback.cpp" />
     <ClCompile Include="RtcpParameters.cpp" />
     <ClCompile Include="rtcp\Bye.cpp" />
@@ -291,30 +297,25 @@
     <ClCompile Include="RtpEncodingParameters.cpp" />
     <ClCompile Include="RtpHeaderExtensionParameters.cpp" />
     <ClCompile Include="RtpHeaderExtensionUri.cpp" />
-    <ClCompile Include="RtpListener.cpp" />
     <ClCompile Include="RtpPacket.cpp" />
     <ClCompile Include="RtpParameters.cpp" />
     <ClCompile Include="RtpProbationGenerator.cpp" />
     <ClCompile Include="RtpRtxParameters.cpp" />
-    <ClCompile Include="RtpStream.cpp" />
-    <ClCompile Include="RtpStreamRecv.cpp" />
-    <ClCompile Include="RtpStreamSend.cpp" />
-    <ClCompile Include="RtxStream.cpp" />
     <ClCompile Include="SeqManager.cpp" />
-    <ClCompile Include="SimpleConsumer.cpp" />
     <ClCompile Include="StunPacket.cpp" />
-    <ClCompile Include="TransportCongestionControlClient.cpp" />
     <ClCompile Include="TransportCongestionControlServer.cpp" />
-    <ClCompile Include="TransportTuple.cpp" />
-    <ClCompile Include="TrendCalculator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BweType.hpp" />
+    <ClInclude Include="capi_rtc_player.h" />
+    <ClInclude Include="capi_rtc_publish.h" />
     <ClInclude Include="carraysize.h" />
     <ClInclude Include="casync_log.h" />
+    <ClInclude Include="caudio_payload.h" />
     <ClInclude Include="cbyte_order.h" />
     <ClInclude Include="ccfg.h" />
     <ClInclude Include="cclient_msg_dispatch.h" />
+    <ClInclude Include="ccodec_payload.h" />
     <ClInclude Include="cconfig.h" />
     <ClInclude Include="ccrypto_random.h" />
     <ClInclude Include="cdigit2str.h" />
@@ -335,14 +336,24 @@
     <ClInclude Include="cnet_adapter_test.h" />
     <ClInclude Include="cnet_define.h" />
     <ClInclude Include="common_types.h" />
-    <ClInclude Include="Consumer.hpp" />
     <ClInclude Include="cortc.h" />
     <ClInclude Include="crandom.h" />
     <ClInclude Include="crate_calculator.h" />
+    <ClInclude Include="cred_payload.h" />
+    <ClInclude Include="crtc_connection.h" />
+    <ClInclude Include="crtc_constants.h" />
+    <ClInclude Include="crtc_consumer.h" />
     <ClInclude Include="crtc_sdp.h" />
     <ClInclude Include="crtc_sdp_define.h" />
     <ClInclude Include="crtc_sdp_test.h" />
     <ClInclude Include="crtc_sdp_util.h" />
+    <ClInclude Include="crtc_server_mgr.h" />
+    <ClInclude Include="crtc_source.h" />
+    <ClInclude Include="crtc_source_description.h" />
+    <ClInclude Include="crtc_ssrc_generator.h" />
+    <ClInclude Include="crtc_track_description.h" />
+    <ClInclude Include="crtc_user_config.h" />
+    <ClInclude Include="crtx_paylod_des.h" />
     <ClInclude Include="cshare_proto_error.h" />
     <ClInclude Include="csocket_util.h" />
     <ClInclude Include="csrtp_session.h" />
@@ -353,16 +364,13 @@
     <ClInclude Include="croom.h" />
     <ClInclude Include="croom_mgr.h" />
     <ClInclude Include="crtc_util.h" />
-    <ClInclude Include="csctp_association.h" />
-    <ClInclude Include="csctp_association_mgr.h" />
     <ClInclude Include="ctimer.h" />
     <ClInclude Include="ctime_api.h" />
     <ClInclude Include="ctime_const.h" />
     <ClInclude Include="ctime_elapse.h" />
+    <ClInclude Include="cvideo_payload.h" />
     <ClInclude Include="cwan_server.h" />
     <ClInclude Include="cwan_session.h" />
-    <ClInclude Include="cwebrtc_mgr.h" />
-    <ClInclude Include="cwebrtc_transport.h" />
     <ClInclude Include="cwebsocket_msg_reserve.h" />
     <ClInclude Include="cnet_type.h" />
     <ClInclude Include="cnoncopyable.h" />
@@ -371,12 +379,10 @@
     <ClInclude Include="cwebsocket_server_mgr.h" />
     <ClInclude Include="cwebsocket_session.h" />
     <ClInclude Include="cwin32.h" />
-    <ClInclude Include="DtlsTransport.hpp" />
     <ClInclude Include="H264.hpp" />
     <ClInclude Include="h264_profile_level_id.h" />
     <ClInclude Include="IceCandidate.hpp" />
     <ClInclude Include="IceServer.hpp" />
-    <ClInclude Include="KeyFrameRequestManager.hpp" />
     <ClInclude Include="libwebrtc\api\bitrate_constraints.h" />
     <ClInclude Include="libwebrtc\api\network_state_predictor.h" />
     <ClInclude Include="libwebrtc\api\transport\bitrate_settings.h" />
@@ -440,12 +446,10 @@
     <ClInclude Include="libwebrtc\rtc_base\type_traits.h" />
     <ClInclude Include="libwebrtc\rtc_base\units\unit_base.h" />
     <ClInclude Include="libwebrtc\system_wrappers\source\field_trial.h" />
-    <ClInclude Include="NackGenerator.hpp" />
     <ClInclude Include="cnetwork_constants.h" />
     <ClInclude Include="Parameters.hpp" />
     <ClInclude Include="PayloadDescriptorHandler.hpp" />
     <ClInclude Include="PortManager.hpp" />
-    <ClInclude Include="Producer.hpp" />
     <ClInclude Include="rtcp\Bye.hpp" />
     <ClInclude Include="rtcp\CompoundPacket.hpp" />
     <ClInclude Include="rtcp\Feedback.hpp" />
@@ -476,21 +480,12 @@
     <ClInclude Include="rtcp\XrReceiverReferenceTime.hpp" />
     <ClInclude Include="RtpDictionaries.hpp" />
     <ClInclude Include="RtpHeaderExtensionIds.hpp" />
-    <ClInclude Include="RtpListener.hpp" />
     <ClInclude Include="RtpPacket.hpp" />
     <ClInclude Include="RtpProbationGenerator.hpp" />
-    <ClInclude Include="RtpStream.hpp" />
-    <ClInclude Include="RtpStreamRecv.hpp" />
-    <ClInclude Include="RtpStreamSend.hpp" />
-    <ClInclude Include="RtxStream.hpp" />
     <ClInclude Include="SeqManager.hpp" />
-    <ClInclude Include="SimpleConsumer.hpp" />
     <ClInclude Include="StunPacket.hpp" />
     <ClInclude Include="Tools.hpp" />
-    <ClInclude Include="TransportCongestionControlClient.hpp" />
     <ClInclude Include="TransportCongestionControlServer.hpp" />
-    <ClInclude Include="TransportTuple.hpp" />
-    <ClInclude Include="TrendCalculator.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
