--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -159,7 +159,9 @@
     <ClCompile Include="cconfig.cpp" />
     <ClCompile Include="ccrypto_random.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
-    <ClCompile Include="cdtls_impl.cpp" />
+    <ClCompile Include="cdtls.cpp" />
+    <ClCompile Include="cdtls_certificate.cpp" />
+    <ClCompile Include="cdtls_test.cpp" />
     <ClCompile Include="cglobal_rtc.cpp" />
     <ClCompile Include="cguard_reply.cpp" />
     <ClCompile Include="cifaddrs_android.cc" />
@@ -322,7 +324,9 @@
     <ClInclude Include="cconfig.h" />
     <ClInclude Include="ccrypto_random.h" />
     <ClInclude Include="cdigit2str.h" />
-    <ClInclude Include="cdtls_impl.h" />
+    <ClInclude Include="cdtls.h" />
+    <ClInclude Include="cdtls_certificate.h" />
+    <ClInclude Include="cdtls_test.h" />
     <ClInclude Include="cglobal_rtc.h" />
     <ClInclude Include="cguard_reply.h" />
     <ClInclude Include="cifaddrs_android.h" />
