[DTLS     SRTP OK ]

--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -195,8 +195,10 @@
     <ClCompile Include="crtc_user_config.cpp" />
     <ClCompile Include="crtx_paylod_des.cpp" />
     <ClCompile Include="csocket_util.cpp" />
+    <ClCompile Include="csrtp.cpp" />
     <ClCompile Include="csrtp_session.cpp" />
     <ClCompile Include="csrtp_session_test.cpp" />
+    <ClCompile Include="csrtp_util.cpp" />
     <ClCompile Include="cstr2digit.cpp" />
     <ClCompile Include="cudp_socket.cpp" />
     <ClCompile Include="cudp_socket_handler.cpp" />
@@ -369,8 +371,11 @@
     <ClInclude Include="crtx_paylod_des.h" />
     <ClInclude Include="cshare_proto_error.h" />
     <ClInclude Include="csocket_util.h" />
+    <ClInclude Include="csrtp.h" />
+    <ClInclude Include="csrtp_define.h" />
     <ClInclude Include="csrtp_session.h" />
     <ClInclude Include="csrtp_session_test.h" />
+    <ClInclude Include="csrtp_util.h" />
     <ClInclude Include="cstr2digit.h" />
     <ClInclude Include="cudp_socket.h" />
     <ClInclude Include="cudp_socket_handler.h" />
